# reasoning_agent

./: .gitignore  README.md  requirements.md
.clinerules/: programming-guidelines.md  project-management.md
.clinerules/memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
ai-research-agent/: .env.example  README.md  main.py  pyproject.toml
ai-research-agent/ai_research_agent/: agent.py  config.py  models.py  state_machine.py
ai-research-agent/ai_research_agent/components/: __init__.py  executor.py  planner.py  synthesis.py
ai-research-agent/ai_research_agent/memory/: __init__.py  long_term.py
ai-research-agent/ai_research_agent/reasoning/: __init__.py  tree_of_thoughts.py
ai-research-agent/ai_research_agent/tools/: __init__.py  web_search.py
ai-research-agent/src/: __init__.py
ai-research-agent/src/memory/: short_term.py
ai-research-agent/src/reasoning/: react.py
ai-research-agent/src/tools/: data_analyzer.py  pdf_parser.py
